- Implemented authenticaton and authorization.
